--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="imagen/j (1).png" alt="Logo inicial de mi nombre ">
+        <img src="imagen/j (1).png" alt=" inicial de mi nombre ">
         <h1>Encriptador</h1>
     </header>
     <main>
