Se borro de la linea 21 h6

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
         <section>
             <textarea class="input-texto" cols="40" rows="6" placeholder="Ingrese el texto aqui/  "></textarea>
+            <h6 class="informacion"></h6>
             <div id="div-desaparece">
-                <h6 class="informacion">Solo letras minúsculas y sin acentos.</h6>
             </div>
             <div class="botones">
                 <button class="encriptar" onclick="btnEncriptar()">
