--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="imagen/cerrar-con-llave.png">
-    <title>Encriptador</title>
+    <link rel="icon" href="imagen/encriptado.png">
+    <title>Encriptador de Texto</title>
 </head>
 <body>
     <header>
-        <img src="imagen/j (1).png" alt=" inicial de mi nombre ">
+        <img src="imagen/encriptado-de-datos.png" alt="Icono de encriptador">
         <h1>Encriptador</h1>
     </header>
     <main>
         <section>
-            <textarea class="input-texto" cols="40" rows="6" placeholder="Ingrese el texto aqui/  "></textarea>
+            <textarea class="input-texto" cols="40" rows="6" placeholder="Ingrese el texto aqui... "></textarea>
             <h6 class="informacion"></h6>
             <div id="div-desaparece">
             </div>
